--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,71 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  overflow: hidden;
+  margin: 0px;
+  background-color: black;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+#instructions {
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 50%;
+  left: 50%;
+  height: 500px;
+  width: 600px;
+  margin-top: -250px;
+  margin-left: -300px;
+  position: absolute;
+  font-size: 24px;
+  font-family: monospace;
+  color: white;
   text-align: center;
+  pointer-events: none;
+  user-select: none;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
+#instructions a {
+  color: white;
+  pointer-events: auto;
 }
 
-.card {
-  padding: 2em;
+#instructions button {
+  font-size: 24px;
+  pointer-events: auto;
 }
 
-.read-the-docs {
-  color: #888;
+kbd {
+  padding: 0px 4px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 4px;
+  background: grey;
+  font-size: 19px;
+  color: white;
+  font-family: monospace;
+  font-style: normal;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+#loader {
+  left: 50%;
+  margin-left: -4em;
+  font-size: 10px;
+  border: 0.8em solid rgba(0, 0, 0, 1);
+  border-left: 0.8em solid rgba(58, 166, 165, 1);
+  animation: spin 1.1s infinite linear;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+#loader,
+#loader:after {
+  border-radius: 50%;
+  width: 8em;
+  height: 8em;
+  display: block;
+  position: absolute;
+  top: 50%;
+  margin-top: -4.05em;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@keyframes spin {
+  0% {
+    transform: rotate(360deg);
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+  100% {
+    transform: rotate(0deg);
   }
 }
