--- a/src/style.css
+++ b/src/style.css
@@ -78,3 +78,34 @@ kbd {
     transform: rotate(0deg);
   }
 }
+
+#timer {
+  font-family: monospace;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 16vw;
+  width: 16vw;
+  margin-left: -8vw;
+  margin-top: -50vh;
+  font-size: 16vh;
+  color: white;
+  text-shadow: 2px 2px 0 #000;
+  text-align: center;
+  display: none;
+}
+
+#level {
+  font-family: monospace;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 32vw;
+  width: 32vw;
+  margin-left: -16vw;
+  margin-top: -30vh;
+  font-size: 4vh;
+  color: white;
+  text-shadow: 2px 2px 0 #000;
+  text-align: center;
+}
